implement GET /movies filtering
